--- a/controllers/contacts/_list_toolbar.htm
+++ b/controllers/contacts/_list_toolbar.htm
@@ -16,4 +16,6 @@
         data-stripe-load-indicator>
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
+
+    <a href="javascript:void(0)" class="btn btn-warning" id="btn-export"><i class="icon-file-pdf-o"></i> Export Contacts</a>
 </div>
