Update export Contacts function

--- a/controllers/contacts/_list_toolbar.htm
+++ b/controllers/contacts/_list_toolbar.htm
@@ -17,5 +17,5 @@
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
 
-    <a href="javascript:void(0)" class="btn btn-warning" id="btn-export"><i class="icon-file-pdf-o"></i> Export Contacts</a>
+    <a href="<?= Backend::url('johngerome/sm/contacts/export') ?>" target="_blank" class="btn btn-warning"><i class="icon-file-pdf-o"></i> Export Contacts</a>
 </div>
